--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 POST_HOST = localhost
 POST_PASSWORD = AzertY
-POST_DATABASE = nest_api
+POST_DATABASE = api
 POST_PORT = 5432
 POST_USER = postgres
